# CQP

Ex/Common/: CMakeLists.txt  numerov.hpp  test  test_common.cpp
Ex/Ex1/: 1dqs  Tdep.eps  delta.eps  plots.plt  tunnel.eps
Ex/Ex1/CQP_Ex1_ricoh/: 1d_quantum_scattering.cpp
Ex/Ex2/: ex2.py  numerov.py
Ex/edskeleton/: build.txt  skeleton.cpp  skeleton.py
Lsg/.svn/: entries
Lsg/exercises/.svn/: entries
Lsg/exercises/.svn/text-base/: exercise2.pdf.svn-base  exercise5.pdf.svn-base
Lsg/solutions/.svn/: entries
Lsg/solutions/ex01/.svn/: entries
Lsg/solutions/ex01/.svn/text-base/: barrier.py.svn-base  transmission_vs_energy.pdf.svn-base  wavefunction.pdf.svn-base
Lsg/solutions/ex02/: match.py
Lsg/solutions/ex02/.svn/: entries
Lsg/solutions/ex02/.svn/text-base/: anharm.py.svn-base  difflog_c300.pdf.svn-base  match_c300.pdf.svn-base
Lsg/solutions/ex03/.svn/: entries
Lsg/solutions/ex03/.svn/text-base/: scattering.py.svn-base
Lsg/solutions/ex04/: hamiltonians.nb
Lsg/solutions/ex04/.svn/: entries
Lsg/solutions/ex05/: Makefile  binning.py
Lsg/solutions/ex05/.svn/: entries
Lsg/solutions/ex05/.svn/text-base/: binning.pdf.svn-base  parm.svn-base  pimc.cpp.svn-base  pimc.py.svn-base  tbinning.pdf.svn-base  (+1 more)
Lsg/solutions/ex06/: Makefile
Lsg/solutions/ex06/.svn/: entries
Lsg/solutions/ex07/.svn/: entries
Lsg/solutions/ex08/: helium.py  hydrogen.py
Lsg/solutions/ex08/.svn/: entries
Lsg/solutions/ex09/: Makefile
Lsg/solutions/ex09/.svn/: entries
Lsg/solutions/ex10/: ctqmc.py
Lsg/solutions/ex10/.svn/: entries
(+10 files in other folders)
